carer section add

--- a/index.html
+++ b/index.html
@@ -86,6 +86,37 @@
                 <p class="header-desctiption">PC. dad’s phone, mom’s tablet, or your Chromebook, <br> with Gamer you can play your favorite games online <br> for free, any time, anywhere , on any device.</p>
             </div>
         </section>
+        <section class="section-6-carrer">
+
+            <div class="main-section-6-content-1">
+                <div class="section-5-2">
+                    <h3 style="font-size: 3rem; color: aliceblue; font-weight: 500;">Careers</h3>
+                    <p style="color: azure;" class="header-desctiption">Gamer is driven to create the best and most fun games for our millions of players all around the world, and we,re always on the lookout for more top talent to join our growing team. If you,d like to help us make great games and be a part of Gamers bright future, we,d love to hear from you.</p>
+                    <div class="section-item">
+                        <div style="list-style: none; ">
+                            <li>Multimedia Artist +</li>
+                            <li>Data Engineer +</li> 
+                            <li>Adroid Engineer +</li> 
+                            <li>Server Developer +</li>
+                            <li>Group Financial Accountant +</li>
+                            <li>Senior User Acuisition Specialist +</li>
+                       </div>
+                       <div>
+                       <li>Lisbon, Portugal </li>
+                       <li>Lisbon, Portugal</li>
+                       <li>Zoetermeer, Netherlands </li>
+                       <li>Lisbon, Portugal</li>
+                       <li>London, United Kingdom</li>
+                       <li>Lisbon, Portugal</li>
+                   </div>
+                   <button style="padding:21px 40px;" class="button-primary">SEE ALL POSSITIONS</button>
+                    </div>
+                </div>
+                
+            </div>
+            <div class="carrer-img"><img src="images/Group 65.png" alt=""></div>
+
+        </section>
     </main>
     <!-- footer releted code -->
     <footer>
